tests/sumo/output/e2/errors/freq_false/errors.sumo
Error: Attribute 'freq' in definition of e2Detector '4/1to3/1' is not a time value.
Quitting (on error).
